--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "nodemon": "2.0.22"
   },
   "dependencies": {
+    "argon2": "0.30.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "16.0.3",
     "express": "4.18.2",
-    "mysql": "2.18.1",
-    "dotenv": "16.0.3"
+    "jsonwebtoken": "9.0.0",
+    "mysql": "2.18.1"
   }
 }
